# draped_dreams

./: .gitignore  .pre-commit-config.yaml  CORS_CONFIGURATION.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_CONFIGURATION.md  FRAPPE_CLOUD_DEPLOYMENT.md  MANIFEST.in  PRODUCTION_DEPLOYMENT.md  README.md  check_all.py  commit_changes.sh  config.ini  config_manager.py  configure_cors.py  cookies.txt  copy_assets_to_production.sh  create_sample_products.py  deploy_assets.py  deploy_assets.sh  deploy_assets_simple.sh  deploy_to_production.sh  fix_auth.py  install.py  install_doctypes.py  new_site_setup.sh  production_deploy.sh  pyproject.toml  server_setup.sh  setup.py  setup.sh  setup_cors.sh  setup_local_cors.sh  simple_production_deploy.sh  test_application.py  test_cors.py  test_local_api.py  test_registration_api.py  test_universal_app.py  update_assets.py  verify_api.py
.github/workflows/: ci.yml
draped_dreams/: hooks.py  install.py  install_doctypes.py  modules.txt
draped_dreams/api/: __init__.py  assets.py  auth.py  banners.py  dashboard.py  orders.py  products.py
draped_dreams/doctype/banner/: banner.json  banner.py
draped_dreams/doctype/register/: register.json  register.py
draped_dreams/www/: dashboard.py  draped_dreams.html  draped_dreams.py
frontend/: README.md  env.development.example  env.production.example  index.html  package.json  tailwind.config.js  vite.config.js
frontend/public/: icon-generator.html
frontend/src/: App-simple.vue  App.vue  constants.js  index.css  main-simple.js  main.js  router.js  socket.js  translation.js
(+686 files in other folders)
