[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draped_dreams"
version = "0.0.1"
description = "E-commerce application for saree store"
authors = [
    {name = "Draped Dreams", email = "admin@drapeddreams.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "frappe",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["draped_dreams*"]
